# micro-classifier

./: README.md  System_Design_Document.md  design_document.md  pyproject.toml
.github/workflows/: .gitkeep
classifier_router/: __init__.py  config.py  factory.py  kafka_service.py  logging_cfg.py  main.py  message_processor.py  models.py  router.py  schemas.py
classifier_router/common/: __init__.py  exceptions.py
classifier_router/config/: __init__.py  config.py  settings.py
classifier_router/core/: __init__.py  factory.py  models.py  router.py
classifier_router/core/detector/: jurisdiction.py  lease_header.py
classifier_router/detector/: __init__.py  base.py  jurisdiction.py  lease_header.py
classifier_router/kafka/: __init__.py  processor.py  service.py
config/: detector_config.json
docs/: API.md  Architecture.md
k8s/: .gitkeep
tests/: __init__.py  test_router.py
tests/fixtures/classifier/: .gitkeep  lease_state_ca.txt  nda_ma.txt  poa_ny.txt
tests/integration/: .gitkeep  test_classifier_router.py
tests/unit/: .gitkeep  test_base_detector.py  test_factory.py  test_jurisdiction_detector.py  test_lease_header_detector.py  test_logging_cfg.py  test_message_processor.py  test_models.py  test_schemas.py
